@@ -108,11 +108,12 @@ DEB_GCC_VERSION ?= -4.8
 
 RUN_TESTSUITE = yes
 
-# Set cross and native compiler names, including version
-CC     = $(DEB_HOST_GNU_TYPE)-$(BASE_CC)$(DEB_GCC_VERSION)
-CXX    = $(DEB_HOST_GNU_TYPE)-$(BASE_CXX)$(DEB_GCC_VERSION)
-BUILD_CC = $(DEB_BUILD_GNU_TYPE)-$(BASE_CC)
-BUILD_CXX = $(DEB_BUILD_GNU_TYPE)-$(BASE_CXX)
+# Set cross and native compiler names, including version. On *i386 we need to
+# change the GNU triplet as it doesn't match the compiler name.
+CC     = $(subst i586,i486,$(DEB_HOST_GNU_TYPE))-$(BASE_CC)$(DEB_GCC_VERSION)
+CXX    = $(subst i586,i486,$(DEB_HOST_GNU_TYPE))-$(BASE_CXX)$(DEB_GCC_VERSION)
+BUILD_CC = $(subst i586,i486,$(DEB_BUILD_GNU_TYPE))-$(BASE_CC)
+BUILD_CXX = $(subst i586,i486,$(DEB_BUILD_GNU_TYPE))-$(BASE_CXX)
 
 BUILD_CFLAGS = -O2 -g
 HOST_CFLAGS = -pipe -O2 -g $(call xx,extra_cflags)
