@@ -1,6 +1,9 @@
 glibc (2.19-10) UNRELEASED; urgency=medium
 
-  * 
+  [ Aurelien Jarno ]
+  * debian/rules: change the GNU triplet from i586 to i486 when computing
+    the compiler name, as the name provided by dpkg (i586-linux-gnu)
+    doesn't match the gcc name (i486-linux-gnu-gcc-4.8).
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Aug 2014 18:26:45 +0200
 
